--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 Dogs Fetcher Alpine js component!
             </h1>
             <section
-                class="bg-gray-50 p-5 flex flex-col gap-5 shadow-inner rounded-lg"
+                class="bg-gray-50 p-5 flex flex-col gap-5 justify-center items-center shadow-inner rounded-lg"
             >
                 <div
                     x-data="{}"
